--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                     <li><a href="#gallery">Gallery</a></li>
                                     <li><a href="#blog">Blog</a></li>
                                     <li><a href="#pricing">pricing</a></li>
-                                    <li><a href="#reservation">Reservaion</a></li>
+                                    <li><a href="#reservation">Reservation</a></li>
                                     <li><a href="#footer">Contact us</a></li>
                                 </ul>
                             </div>
@@ -1142,12 +1142,12 @@
                                 <p>
                                     <i class="fa fa-mobile" aria-hidden="true"></i>
                                     <span>
-									+91 80005 89080 
+									+91 99999 99999 
 								</span>
                                 </p>
                                 <p>
                                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <span><a href="#">support@foodfunday.com</a></span>
+                                    <span><a href="#">support@website.com</a></span>
                                 </p>
                             </div>
                             <!-- end footer-box-c -->
