--- a/test.html
+++ b/test.html
@@ -22,6 +22,7 @@
     <meta property="og:description" content="This is description 007!!" />
     <meta property="og:video" content="https://github.com/shriyamverma/Restaurant-Site/blob/main/Atom%20-%2037569.mp4" />
     <meta property="og:video:secure_url" content="https://github.com/shriyamverma/Restaurant-Site/blob/main/Atom%20-%2037569.mp4" />
+    <meta property="og:video:type" content="video/mp4" />
     <meta property="og:video:width" content="200" />
     <meta property="og:video:height" content="200" />
 </head>
