--- a/test.html
+++ b/test.html
@@ -20,9 +20,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="This is title" />
     <meta property="og:description" content="This is description 007!!" />
-    <meta property="og:video" content="https://github.com/shriyamverma/Restaurant-Site/blob/main/Atom%20-%2037569.mp4" />
-    <meta property="og:video:secure_url" content="https://github.com/shriyamverma/Restaurant-Site/blob/main/Atom%20-%2037569.mp4" />
-    <meta property="og:video:type" content="text/html">
+    <meta property="og:video" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
+    <meta property="og:video:secure_url" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
+    <meta property="og:video:type" content="video/mp4">
     <meta property="og:video:width" content="200" />
     <meta property="og:video:height" content="200" />
 </head>
