--- a/experiment/test.html
+++ b/experiment/test.html
@@ -3,7 +3,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="This is title" />
     <meta property="og:description" content="This is description 007!!" />
-    <meta property="og:image" content="https://github.com/shriyamverma/Restaurant-Site/blob/main/experiment/portrait.png" />
+    <meta property="og:image" content="https://ibb.co/r4gjVxd" />
     <meta property="og:video" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
     <meta property="og:video:secure_url" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
     <meta property="og:video:type" content="video/mp4">
