--- a/experiment/test.html
+++ b/experiment/test.html
@@ -4,6 +4,8 @@
     <meta property="og:title" content="This is title" />
     <meta property="og:description" content="This is description 007!!" />
     <meta property="og:image" content="https://s10.gifyu.com/images/portrait.png" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="315" />
     
     <meta property="og:video" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
     <meta property="og:video:secure_url" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
