--- a/experiment/test.html
+++ b/experiment/test.html
@@ -2,7 +2,7 @@
     
     <meta property="og:type" content="website" />
     <meta property="og:title" content="This is title" />
-    <meta property="og:description" content="This is description 007!!" />
+    <meta property="og:description" content="This is description!!" />
     <meta property="og:image" content="https://s10.gifyu.com/images/portrait.png" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="315" />
