--- a/experiment/test.html
+++ b/experiment/test.html
@@ -2,9 +2,11 @@
     
     <meta property="og:type" content="website" />
     <meta property="og:title" content="This is title" />
-    <meta property="og:description" content="This is description 001!!" />
+    <meta property="og:description" content="This is description 002!!" />
     <meta property="og:image" content="https://s10.gifyu.com/images/landscape.png" />
-    <meta property="og:image:width" content="600" />
+    <meta property="og:image:secure_url" content="https://s10.gifyu.com/images/landscape.png" />
+    <meta property="og:video:type" content="image/png">
+    <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="315" />
     
     <meta property="og:video" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
