--- a/experiment/test.html
+++ b/experiment/test.html
@@ -1,12 +1,19 @@
 
     
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shriyamverma.github.io/Restaurant-Site/" />
     <meta property="og:title" content="This is title" />
-    <meta property="og:description" content="This is description 003!!" />
+    <meta property="og:description" content="This is description 007!!" />
     <meta property="og:image" content="https://s10.gifyu.com/images/landscape.png" />
     <meta property="og:image:secure_url" content="https://s10.gifyu.com/images/landscape.png" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="500" />
+
+    <meta property="og:video" content="https://watch.wave.video/Ya9ZcbBHCxvViyKe" />
+    <meta property="og:video:secure_url" content="https://watch.wave.video/Ya9ZcbBHCxvViyKe" />
+    <meta property="og:video:type" content="video/mp4">
+    <meta property="og:video:width" content="200" />
+    <meta property="og:video:height" content="200" />
     
 
