--- a/experiment/test.html
+++ b/experiment/test.html
@@ -1,7 +1,7 @@
 
     
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shriyamverma.github.io/Restaurant-Site/" />
+    <meta property="og:url" content="https://shriyamverma.github.io/Restaurant-Site/experiment/test.html" />
     <meta property="og:title" content="This is title" />
     <meta property="og:description" content="This is description 007!!" />
     <meta property="og:image" content="https://s10.gifyu.com/images/landscape.png" />
