--- a/experiment/test.html
+++ b/experiment/test.html
@@ -5,8 +5,8 @@
     <meta property="og:title" content="This is title" />
     <meta property="og:description" content="This is description 123!!" />
 
-    <meta property="og:video" content="https://watch.wave.video/Ya9ZcbBHCxvViyKe" />
-    <meta property="og:video:secure_url" content="https://watch.wave.video/Ya9ZcbBHCxvViyKe" />
+    <meta property="og:video" content="https://nps-assets.dev.ring.com/7475160/ccf21f26-e163-40c0-ad3f-e61060d127a0_x.mp4" />
+    <meta property="og:video:secure_url" content="https://nps-assets.dev.ring.com/7475160/ccf21f26-e163-40c0-ad3f-e61060d127a0_x.mp4" />
     <meta property="og:video:type" content="video/mp4">
     <meta property="og:video:width" content="200" />
     <meta property="og:video:height" content="200" />
