--- a/experiment/test.html
+++ b/experiment/test.html
@@ -1,18 +1,15 @@
 
-    
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shriyamverma.github.io/Restaurant-Site/experiment/test.html" />
     <meta property="og:title" content="This is title" />
-    <meta property="og:description" content="This is description 007!!" />
-
-    <meta property="og:video" content="https://nps-assets.dev.ring.com/7475160/ccf21f26-e163-40c0-ad3f-e61060d127a0_x.mp4" />
-    <meta property="og:video:secure_url" content="https://nps-assets.dev.ring.com/7475160/ccf21f26-e163-40c0-ad3f-e61060d127a0_x.mp4" />
-    <meta property="og:video:type" content="video/mp4">
-    <meta property="og:video:width" content="200" />
-    <meta property="og:video:height" content="200" />
-    
+    <meta property="og:description" content="This is description 003!!" />
     <meta property="og:image" content="https://s10.gifyu.com/images/landscape.png" />
     <meta property="og:image:secure_url" content="https://s10.gifyu.com/images/landscape.png" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="315" />
+    <meta property="og:image:height" content="400" />
+
+    <meta property="og:video" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
+    <meta property="og:video:secure_url" content="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
+    <meta property="og:video:type" content="video/mp4">
+    <meta property="og:video:width" content="200" />
+    <meta property="og:video:height" content="200" />
